--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -467,6 +467,7 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 .copyrights {
   color: #fe142f;
@@ -510,6 +511,7 @@ footer {
   .hero-img img {
     border-radius: 10px;
     margin-top: 40px;
+    object-fit: cover;
   }
   .hero-section > .btn-signup {
     display: block;
@@ -530,5 +532,13 @@ footer {
   to {
     opacity: 1;
   }
+}
+
+@media screen and (min-width: 800px) and (max-width: 934px){
+
+  .hero-headline{
+     font-size:80px;
+  }
+
 }
 
