--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -467,8 +467,8 @@ input[data-error]::after {
   height: 100%;
   display: block;
   padding: 0;
-  overflow:hidden;
-  position:relative;
+  object-fit: cover;
+ 
 }
 .copyrights {
   color: #fe142f;
