--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -73,38 +73,6 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-} 
 
 main {
   font-size: 130%;
@@ -485,7 +453,47 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+
+/* reponsive */
+
+/* modification du topnav pour un meilleur affichage mobile */
+
+
+@media screen and (max-width: 768px) {
+  .topnav {
+    flex-wrap: wrap;
+  }
+
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+}
+
+/** gére le responsive, change l'affichage de l'image , ainsi que le texte, pour être adapter aux différents écrans */
+ 
+@media screen and (max-width: 1000px) {
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -493,7 +501,7 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    min-width: auto;
   }
   .hero-content::after {
     content: unset;
@@ -502,28 +510,44 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 2.5rem;
     white-space: normal;
   }
   .hero-text {
     width: unset;
     font-size: 1.5rem;
+    margin-top: 1.5rem;
   }
   .hero-img img {
     border-radius: 10px;
     margin-top: 40px;
+    width: 80%;
+    height: auto;
     object-fit: cover;
+    display: block;
+    margin: 0 auto;
   }
   .hero-section > .btn-signup {
-    display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
+    display: none
+  }
+  .btn-signup-container{
+    display:flex;
+    justify-content:center;
   }
   .copyrights {
     margin-top: 50px;
     text-align: center;
   }
 }
+
+/** permet de faire disparaitre le bouton d'inscription pour le responsive, à partir de 800px */
+
+@media screen and (min-width: 800px) {
+  .btn-signup-container {
+    display: none;
+  }
+}
+
 
 @keyframes modalopen {
   from {
@@ -535,11 +559,6 @@ footer {
   }
 }
 
-@media screen and (min-width: 800px) and (max-width: 934px){
 
-  .hero-headline{
-     font-size:80px;
-  }
 
-}
 
